k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-musik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-musik
  template:
    metadata:
      labels:
        app: backend-musik
    spec:
      containers:
      - name: backend-musik
        image: nrrbni/backend-musik:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-musik-service
spec:
  selector:
    app: backend-musik
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
